# secret-box

./: Cargo.toml  LICENSE  Makefile  README.md
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.rs  serde_example.rs
src/: lib.rs
tests/: basic_operations.rs  serde_tests.rs  zeroization.rs
tests/common/: mod.rs
