[package]
name = "secret-box"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
authors = ["Brendan Ryan"]
description = "Safe boxing mechanism for sensitive values with automatic zeroization"
license = "Apache-2.0"
repository = "https://github.com/brendanjryan/secret-box"
documentation = "https://docs.rs/secret-box"
homepage = "https://github.com/brendanjryan/secret-box"
readme = "README.md"
keywords = ["secret", "security", "crypto", "zeroize", "password"]
categories = ["cryptography", "no-std"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
zeroize = { version = "1.8", features = ["derive", "alloc"] }
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc", "derive"] }

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[[example]]
name = "serde_example"
required-features = ["serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
